set(SOURCE_TERMS_SOURCES
    cartesianR2_Poisson_CircularGeometry.cpp
    cartesianR2_Poisson_CzarnyGeometry.cpp
    cartesianR2_Poisson_ShafranovGeometry.cpp
    cartesianR2_Sonnendrucker_CircularGeometry.cpp
    cartesianR2_Sonnendrucker_CzarnyGeometry.cpp
    cartesianR2_SonnendruckerGyro_CircularGeometry.cpp
    cartesianR2_SonnendruckerGyro_CzarnyGeometry.cpp
    cartesianR2_SonnendruckerGyro_ShafranovGeometry.cpp
    cartesianR2_Sonnendrucker_ShafranovGeometry.cpp
    cartesianR2_Zoni_CircularGeometry.cpp
    cartesianR2_Zoni_CzarnyGeometry.cpp
    cartesianR2_ZoniGyro_CircularGeometry.cpp
    cartesianR2_ZoniGyro_CzarnyGeometry.cpp
    cartesianR2_ZoniGyro_ShafranovGeometry.cpp
    cartesianR2_Zoni_ShafranovGeometry.cpp
    cartesianR2_ZoniShifted_CircularGeometry.cpp
    cartesianR2_ZoniShifted_CzarnyGeometry.cpp
    cartesianR2_ZoniShiftedGyro_CircularGeometry.cpp
    cartesianR2_ZoniShiftedGyro_CzarnyGeometry.cpp
    cartesianR2_ZoniShiftedGyro_ShafranovGeometry.cpp
    cartesianR2_ZoniShifted_ShafranovGeometry.cpp
    cartesianR6_Poisson_CircularGeometry.cpp
    cartesianR6_Poisson_CzarnyGeometry.cpp
    cartesianR6_Poisson_ShafranovGeometry.cpp
    cartesianR6_Sonnendrucker_CircularGeometry.cpp
    cartesianR6_Sonnendrucker_CzarnyGeometry.cpp
    cartesianR6_SonnendruckerGyro_CircularGeometry.cpp
    cartesianR6_SonnendruckerGyro_CzarnyGeometry.cpp
    cartesianR6_SonnendruckerGyro_ShafranovGeometry.cpp
    cartesianR6_Sonnendrucker_ShafranovGeometry.cpp
    cartesianR6_Zoni_CircularGeometry.cpp
    cartesianR6_Zoni_CzarnyGeometry.cpp
    cartesianR6_ZoniGyro_CircularGeometry.cpp
    cartesianR6_ZoniGyro_CzarnyGeometry.cpp
    cartesianR6_ZoniGyro_ShafranovGeometry.cpp
    cartesianR6_Zoni_ShafranovGeometry.cpp
    cartesianR6_ZoniShifted_CircularGeometry.cpp
    cartesianR6_ZoniShifted_CzarnyGeometry.cpp
    cartesianR6_ZoniShiftedGyro_CircularGeometry.cpp
    cartesianR6_ZoniShiftedGyro_CzarnyGeometry.cpp
    cartesianR6_ZoniShiftedGyro_ShafranovGeometry.cpp
    cartesianR6_ZoniShifted_ShafranovGeometry.cpp
    polarR6_Poisson_CircularGeometry.cpp
    polarR6_Poisson_CzarnyGeometry.cpp
    polarR6_Poisson_ShafranovGeometry.cpp
    polarR6_Sonnendrucker_CircularGeometry.cpp
    polarR6_Sonnendrucker_CzarnyGeometry.cpp
    polarR6_SonnendruckerGyro_CircularGeometry.cpp
    polarR6_SonnendruckerGyro_CzarnyGeometry.cpp
    polarR6_SonnendruckerGyro_ShafranovGeometry.cpp
    polarR6_Sonnendrucker_ShafranovGeometry.cpp
    polarR6_Zoni_CircularGeometry.cpp
    polarR6_Zoni_CzarnyGeometry.cpp
    polarR6_ZoniGyro_CircularGeometry.cpp
    polarR6_ZoniGyro_CzarnyGeometry.cpp
    polarR6_ZoniGyro_ShafranovGeometry.cpp
    polarR6_Zoni_ShafranovGeometry.cpp
    polarR6_ZoniShifted_CircularGeometry.cpp
    polarR6_ZoniShifted_CzarnyGeometry.cpp
    polarR6_ZoniShiftedGyro_CircularGeometry.cpp
    polarR6_ZoniShiftedGyro_CulhamGeometry.cpp
    polarR6_ZoniShiftedGyro_CzarnyGeometry.cpp
    polarR6_ZoniShiftedGyro_ShafranovGeometry.cpp
    polarR6_ZoniShifted_ShafranovGeometry.cpp
    refined_ZoniShiftedGyro_CircularGeometry.cpp
    refined_ZoniShiftedGyro_CulhamGeometry.cpp
    refined_ZoniShiftedGyro_CzarnyGeometry.cpp
    refined_ZoniShiftedGyro_ShafranovGeometry.cpp
)

add_library(InputFunctions_SourceTerms STATIC ${SOURCE_TERMS_SOURCES})
target_include_directories(InputFunctions_SourceTerms PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/include/InputFunctions/SourceTerms
)